--- a/briar-android/src/main/res/values/themes.xml
+++ b/briar-android/src/main/res/values/themes.xml
@@ -6,7 +6,9 @@
 		<item name="colorPrimaryDark">@color/briar_primary_dark</item>
 		<item name="colorAccent">@color/briar_accent</item>
 		<item name="android:textColorLink">@color/briar_text_link</item>
+		<item name="android:windowBackground">@color/window_background</item>
 		<item name="android:windowAnimationStyle">@style/ActivityAnimation</item>
+		<item name="alertDialogTheme">@style/BriarDialogTheme.Neutral</item>
 		<item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
 	</style>
 
@@ -28,8 +30,10 @@
 		<item name="colorPrimaryDark">@color/briar_primary_dark</item>
 		<item name="colorAccent">@color/briar_accent</item>
 		<item name="buttonBarPositiveButtonStyle">@style/BriarButtonFlat.Positive</item>
+		<item name="buttonBarNeutralButtonStyle">@style/BriarButtonFlat.Neutral</item>
 		<item name="buttonBarNegativeButtonStyle">@style/BriarButtonFlat.Negative</item>
 		<item name="android:textColorLink">@color/briar_text_link</item>
+		<item name="android:windowBackground">@color/window_background</item>
 		<item name="android:windowAnimationStyle">@style/DialogAnimation</item>
 		<item name="android:filterTouchesWhenObscured">true</item>
 	</style>
@@ -37,6 +41,13 @@
 	<!-- Use this with care. Only used for the screen filter warning dialog -->
 	<style name="BriarDialogThemeNoFilter" parent="BriarDialogTheme">
 		<item name="android:filterTouchesWhenObscured">false</item>
+	</style>
+
+	<!-- Uses neutral colors for the buttons -->
+	<style name="BriarDialogTheme.Neutral" parent="BriarDialogTheme">
+		<item name="buttonBarPositiveButtonStyle">@style/BriarButtonFlat.Neutral</item>
+		<item name="buttonBarNeutralButtonStyle">@style/BriarButtonFlat.Neutral</item>
+		<item name="buttonBarNegativeButtonStyle">@style/BriarButtonFlat.Neutral</item>
 	</style>
 
 	<style name="DialogAnimation" parent="@android:style/Animation.Dialog">
