--- a/briar-android/src/main/res/layout/navigation_menu.xml
+++ b/briar-android/src/main/res/layout/navigation_menu.xml
@@ -2,38 +2,59 @@
 <ScrollView
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="wrap_content"
 	android:layout_height="match_parent"
-	android:background="?android:attr/windowBackground"
+	android:background="@color/window_background"
 	android:fillViewport="true"
 	android:orientation="vertical">
 
-	<LinearLayout
+	<android.support.constraint.ConstraintLayout
 		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:orientation="vertical">
+		android:layout_height="wrap_content">
 
 		<android.support.design.widget.NavigationView
 			android:id="@+id/navigation"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
+			android:background="@color/window_background"
 			app:elevation="0dp"
 			app:headerLayout="@layout/navigation_header"
+			app:itemBackground="@drawable/navigation_item_background"
 			app:itemIconTint="?attr/colorControlNormal"
 			app:itemTextColor="?android:textColorPrimary"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent"
 			app:menu="@menu/navigation_drawer"/>
 
 		<View
-			android:layout_width="match_parent"
+			android:id="@+id/divider1"
+			style="@style/Divider.Horizontal"
+			android:layout_width="0dp"
+			app:layout_constraintEnd_toEndOf="@+id/navigation"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@+id/navigation"/>
+
+		<View
+			android:id="@+id/spacer"
+			android:layout_width="0dp"
 			android:layout_height="0dp"
-			android:layout_weight="1"/>
+			app:layout_constraintBottom_toTopOf="@+id/transports"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@+id/divider1"
+			app:layout_constraintVertical_weight="1"/>
 
 		<include
+			android:id="@+id/transports"
 			layout="@layout/transports_list"
-			android:layout_width="match_parent"
+			android:layout_width="0dp"
 			android:layout_height="wrap_content"
-			android:layout_gravity="bottom"/>
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="@+id/navigation"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@+id/spacer"
+			tools:layout_height="75dp"/>
 
-	</LinearLayout>
+	</android.support.constraint.ConstraintLayout>
 
 </ScrollView>
