--- a/briar-android/src/main/res/layout/preferences_category.xml
+++ b/briar-android/src/main/res/layout/preferences_category.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TextView
+	android:id="@android:id/title"
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
-	android:id="@android:id/title"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	android:layout_marginTop="16dp"
-	android:layout_marginLeft="16dp"
-	android:layout_marginStart="16dp"
+	android:background="@color/preference_category_background"
+	android:padding="16dp"
+	android:textColor="@color/briar_accent"
 	android:textSize="14sp"
 	android:textStyle="bold"
-	android:textColor="@color/preference_category"
 	tools:text="This is a category"/>
