MVP of PIN lock feature
This only shows the settings if a screen lock is available.
If the setting is activated, it shows a drawer item for locking.
Once locked, the screen lock secret needs to be entered to enter the
app again.

First part of #1247

--- a/briar-android/src/main/res/menu/navigation_drawer.xml
+++ b/briar-android/src/main/res/menu/navigation_drawer.xml
@@ -27,6 +27,11 @@
 			android:icon="@drawable/ic_settings_black_24dp"
 			android:title="@string/settings_button"/>
 		<item
+			android:id="@+id/nav_btn_lock"
+			android:icon="@drawable/startup_lock"
+			android:title="@string/lock_button"
+			android:visible="false"/>
+		<item
 			android:id="@+id/nav_btn_signout"
 			android:icon="@drawable/ic_signout"
 			android:title="@string/sign_out_button"/>
