--- a/briar-android/src/main/res/xml/settings.xml
+++ b/briar-android/src/main/res/xml/settings.xml
@@ -44,6 +44,13 @@
 			android:summary="%s"
 			android:title="@string/tor_network_setting"/>
 
+		<CheckBoxPreference
+			android:defaultValue="true"
+			android:key="pref_key_tor_location"
+			android:persistent="false"
+			android:summary="@string/tor_location_setting_hint"
+			android:title="@string/tor_location_setting_title"/>
+
 	</PreferenceCategory>
 
 	<PreferenceCategory
