--- a/briar-android/src/main/res/values/color.xml
+++ b/briar-android/src/main/res/values/color.xml
@@ -8,7 +8,7 @@
 	<color name="briar_green_light">#95D220</color>
 	<color name="briar_link">#2A93C6</color>
 
-	<color name="window_background">#fffafafa</color>
+	<color name="window_background">#E3EBEF</color>
 	<color name="card_background">@color/cardview_light_background</color>
 	<color name="item_background_highlight">#DCDCDC</color>
 	<color name="action_bar_text">#FFFFFF</color>
@@ -21,6 +21,11 @@
 	<color name="briar_accent">@color/briar_blue</color>
 
 	<color name="color_primary">#dd000000</color>
+
+	<color name="msg_in">#FFFFFF</color>
+	<color name="msg_out">#3C7FA9</color>
+	<color name="notice_in">#EBEFF2</color>
+	<color name="notice_out">#236087</color>
 
 	<!-- text colors -->
 	<color name="briar_text_link">@color/briar_link</color>
