--- a/briar-android/src/main/res/layout/activity_password.xml
+++ b/briar-android/src/main/res/layout/activity_password.xml
@@ -60,6 +60,7 @@
 			android:layout_centerHorizontal="true"
 			android:layout_marginTop="@dimen/margin_large"
 			android:clickable="true"
+			android:focusable="true"
 			android:onClick="onForgottenPasswordClick"
 			android:text="@string/forgotten_password"
 			android:textColor="?android:attr/textColorLink"/>
