--- a/briar-android/src/main/res/values-night/color.xml
+++ b/briar-android/src/main/res/values-night/color.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
 	<color name="briar_primary">@color/briar_blue_dark</color>
 	<color name="briar_accent">@color/briar_green</color>
 
 	<color name="preference_category">@color/briar_accent</color>
-	<color name="preference_category_background">@color/divider</color>
+	<color name="preference_category_background">#080C10</color>
 
 	<color name="color_primary">#ffffff</color>
 
-	<color name="msg_in">#2D3E50</color>
+	<color name="msg_in">@color/briar_blue</color>
 	<color name="msg_out">#3C80A9</color>
 	<color name="notice_in">@color/briar_blue_dark</color>
 	<color name="notice_out">#236087</color>
@@ -17,12 +16,14 @@
 	<color name="window_background">@color/briar_blue_very_dark</color>
 	<color name="card_background">@color/briar_blue_dark</color>
 	<color name="item_background_highlight">@color/briar_blue</color>
-	<color name="divider">#000000</color>
 
+	<color name="briar_button_color">@color/briar_blue_light</color>
 	<color name="briar_button_neutral">@color/briar_link</color>
 	<color name="briar_button_text_disabled">#23cccccc</color>
 
+	<color name="thread_indicator">#2D3E50</color>
 	<color name="thread_item_background">@color/window_background</color>
 	<color name="thread_item_highlight">#000000</color>
 
+	<color name="divider">#000000</color>
 </resources>
