--- a/briar-android/src/main/res/layout/text_input_view.xml
+++ b/briar-android/src/main/res/layout/text_input_view.xml
@@ -20,6 +20,7 @@
 			android:id="@+id/emoji_toggle"
 			android:layout_width="@dimen/text_input_height"
 			android:layout_height="@dimen/text_input_height"
+			android:layout_gravity="bottom"
 			android:background="?attr/selectableItemBackground"
 			android:padding="@dimen/margin_small"
 			android:scaleType="center"
@@ -32,21 +33,24 @@
 			android:layout_weight="1"
 			android:background="@android:color/transparent"
 			android:inputType="textMultiLine|textCapSentences"
-			android:maxLines="3"
+			android:maxLines="4"
 			android:minHeight="@dimen/text_input_height"
+			android:paddingLeft="2dp"
 			android:textColor="?android:attr/textColorPrimary"
-			android:textColorHint="?android:attr/textColorTertiary"/>
+			tools:ignore="RtlSymmetry"/>
 
 		<android.support.v7.widget.AppCompatImageButton
 			android:id="@+id/btn_send"
 			android:layout_width="@dimen/text_input_height"
 			android:layout_height="@dimen/text_input_height"
+			android:layout_gravity="bottom"
 			android:background="?attr/selectableItemBackground"
 			android:clickable="true"
 			android:contentDescription="@string/send"
 			android:enabled="false"
 			android:focusable="true"
-			android:padding="@dimen/margin_small"
+			android:padding="4dp"
+			android:scaleType="center"
 			android:src="@drawable/social_send_now_white"
 			app:tint="@color/briar_accent"/>
 
