--- a/briar-android/src/main/res/values/color.xml
+++ b/briar-android/src/main/res/values/color.xml
@@ -17,7 +17,6 @@
 
 	<color name="briar_primary">@color/briar_blue</color>
 	<color name="briar_primary_dark">@color/briar_blue_very_dark</color>
-
 	<color name="briar_accent">@color/briar_blue</color>
 
 	<color name="color_primary">#dd000000</color>
@@ -36,6 +35,7 @@
 	<color name="preference_category">@color/briar_blue_light</color>
 	<color name="preference_category_background">@color/window_background</color>
 
+	<color name="briar_button_color">@color/briar_accent</color>
 	<color name="briar_button_positive">@color/briar_link</color>
 	<color name="briar_button_neutral">@color/briar_blue_light</color>
 	<color name="briar_button_negative">#ff0000</color>
@@ -45,5 +45,6 @@
 	<color name="thread_indicator">#9e9e9e</color>
 	<color name="thread_item_background">#eceff1</color>
 	<color name="thread_item_highlight">#ffffff</color>
+
 	<color name="divider">#c1c1c1</color>
 </resources>
