--- a/briar-android/src/main/res/values/styles.xml
+++ b/briar-android/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
 		<item name="titleTextAppearance">@style/BriarToolbarTitleTextAppearance</item>
 		<item name="subtitleTextAppearance">@style/BriarToolbarSubTitleTextAppearance</item>
 		<item name="android:theme">@style/BriarToolbarTheme</item>
+		<item name="popupTheme">@style/PopupMenu</item>
 	</style>
 
 	<style name="BriarToolbarTheme">
@@ -23,15 +24,19 @@
 		<item name="android:textColor">@color/briar_text_secondary_inverse</item>
 	</style>
 
-	<style name="BriarButton.Default">
-		<item name="android:textAllCaps">true</item>
+	<style name="PopupMenu" parent="Theme.AppCompat.DayNight.DarkActionBar">
+		<item name="android:colorBackground">@color/window_background</item>
+	</style>
+
+	<style name="ButtonTheme" parent="Theme.AppCompat.DayNight">
+		<!-- A strange hack needed only to override button color on all API levels -->
+		<item name="colorAccent">@color/briar_button_color</item>
 	</style>
 
 	<style name="BriarButton" parent="Widget.AppCompat.Button.Colored">
+		<item name="android:theme">@style/ButtonTheme</item>
 		<item name="android:layout_width">match_parent</item>
 		<item name="android:layout_height">wrap_content</item>
-		<item name="android:textSize">@dimen/text_size_medium</item>
-		<item name="android:padding">@dimen/margin_large</item>
 		<item name="android:textColor">@color/button_text</item>
 	</style>
 
@@ -67,8 +72,8 @@
 
 	<style name="Divider.ContactList" parent="Divider">
 		<item name="android:layout_width">match_parent</item>
-		<item name="android:layout_height">1dp</item>
-		<item name="android:layout_marginLeft">@dimen/margin_large</item>
+		<item name="android:layout_height">1px</item>
+		<item name="android:layout_marginLeft">72dp</item>
 	</style>
 
 	<style name="Divider.ThreadItem" parent="Divider">
@@ -89,7 +94,7 @@
 
 	<style name="TextMessage.Notice">
 		<item name="android:textIsSelectable">true</item>
-		<item name="android:textSize">@dimen/text_size_tiny</item>
+		<item name="android:textSize">@dimen/text_size_small</item>
 		<item name="android:textColor">?android:attr/textColorSecondary</item>
 		<item name="android:textStyle">italic</item>
 	</style>
