--- a/briar-android/src/main/res/values/styles.xml
+++ b/briar-android/src/main/res/values/styles.xml
@@ -37,6 +37,8 @@
 		<item name="android:theme">@style/ButtonTheme</item>
 		<item name="android:layout_width">match_parent</item>
 		<item name="android:layout_height">wrap_content</item>
+		<item name="android:textSize">@dimen/text_size_medium</item>
+		<item name="android:padding">@dimen/margin_large</item>
 		<item name="android:textColor">@color/button_text</item>
 	</style>
 
@@ -100,6 +102,7 @@
 	</style>
 
 	<style name="TextMessage.Timestamp">
+		<item name="android:textIsSelectable">false</item>
 		<item name="android:textSize">@dimen/text_size_tiny</item>
 		<item name="android:textColor">?android:attr/textColorTertiary</item>
 		<item name="android:maxLines">1</item>
