--- a/briar-android/src/main/res/values/color.xml
+++ b/briar-android/src/main/res/values/color.xml
@@ -37,6 +37,7 @@
 	<color name="msg_out">@color/briar_blue_elio_light</color>
 	<color name="notice_in">@color/briar_blue_grey</color>
 	<color name="notice_out">@color/briar_blue_elio</color>
+	<color name="msg_border">@color/briar_blue_dark</color>
 
 	<!-- text colors -->
 	<color name="briar_text_link">@color/briar_blue_light</color>
