--- a/briar-android/src/main/res/layout/activity_unlock.xml
+++ b/briar-android/src/main/res/layout/activity_unlock.xml
@@ -14,26 +14,12 @@
 		android:layout_height="150dp"
 		android:layout_margin="@dimen/margin_large"
 		android:src="@drawable/splash_screen"
-		app:layout_constraintBottom_toTopOf="@+id/is_locked"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"
-		app:layout_constraintVertical_chainStyle="spread"
-		app:tint="?attr/colorControlNormal"/>
-
-	<TextView
-		android:id="@+id/is_locked"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:layout_margin="@dimen/margin_large"
-		android:gravity="center"
-		android:text="@string/lock_is_locked"
-		android:textSize="@dimen/text_size_xlarge"
 		app:layout_constraintBottom_toTopOf="@+id/unlock"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/image"
-		app:layout_constraintVertical_chainStyle="spread"/>
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintVertical_bias="0.1"
+		app:tint="?attr/colorControlNormal"/>
 
 	<Button
 		android:id="@+id/unlock"
