Screen Lock: More changes due to code review

--- a/briar-android/src/main/res/layout/activity_unlock.xml
+++ b/briar-android/src/main/res/layout/activity_unlock.xml
@@ -37,7 +37,7 @@
 
 	<Button
 		android:id="@+id/unlock"
-		style="@style/BriarButton.Default"
+		style="@style/BriarButton"
 		android:layout_width="match_parent"
 		android:layout_height="wrap_content"
 		android:layout_margin="@dimen/margin_large"
