--- a/briar-android/src/main/res/values/arrays.xml
+++ b/briar-android/src/main/res/values/arrays.xml
@@ -67,4 +67,23 @@
 		<item>@string/pref_theme_auto_value</item>
 		<item>@string/pref_theme_system_value</item>
 	</string-array>
+
+	<string-array name="pref_key_lock_timeout_entries">
+		<item>@string/pref_lock_timeout_never</item>
+		<item>@string/pref_lock_timeout_1</item>
+		<item>@string/pref_lock_timeout_5</item>
+		<item>@string/pref_lock_timeout_15</item>
+		<item>@string/pref_lock_timeout_30</item>
+		<item>@string/pref_lock_timeout_60</item>
+	</string-array>
+	<string name="pref_lock_timeout_value_default">5</string>
+	<string name="pref_lock_timeout_value_never">-1</string>
+	<string-array name="pref_key_lock_timeout_values">
+		<item>@string/pref_lock_timeout_value_never</item>
+		<item>1</item>
+		<item>5</item>
+		<item>15</item>
+		<item>30</item>
+		<item>60</item>
+	</string-array>
 </resources>
