--- a/briar-android/src/main/res/xml/settings.xml
+++ b/briar-android/src/main/res/xml/settings.xml
@@ -44,7 +44,7 @@
 			android:summary="%s"
 			android:title="@string/tor_network_setting"/>
 
-		<CheckBoxPreference
+		<SwitchPreference
 			android:defaultValue="true"
 			android:key="pref_key_tor_location"
 			android:persistent="false"
@@ -87,41 +87,41 @@
 		android:layout="@layout/preferences_category"
 		android:title="@string/notification_settings_title">
 
-		<CheckBoxPreference
+		<SwitchPreference
 			android:defaultValue="true"
 			android:key="pref_key_notify_sign_in"
 			android:summary="@string/notify_sign_in_summary"
 			android:title="@string/notify_sign_in_title"/>
 
-		<CheckBoxPreference
+		<SwitchPreference
 			android:defaultValue="true"
 			android:key="pref_key_notify_private_messages"
 			android:persistent="false"
 			android:summary="@string/notify_private_messages_setting_summary"
 			android:title="@string/notify_private_messages_setting_title"/>
 
-		<CheckBoxPreference
+		<SwitchPreference
 			android:defaultValue="true"
 			android:key="pref_key_notify_group_messages"
 			android:persistent="false"
 			android:summary="@string/notify_group_messages_setting_summary"
 			android:title="@string/notify_group_messages_setting_title"/>
 
-		<CheckBoxPreference
+		<SwitchPreference
 			android:defaultValue="true"
 			android:key="pref_key_notify_forum_posts"
 			android:persistent="false"
 			android:summary="@string/notify_forum_posts_setting_summary"
 			android:title="@string/notify_forum_posts_setting_title"/>
 
-		<CheckBoxPreference
+		<SwitchPreference
 			android:defaultValue="true"
 			android:key="pref_key_notify_blog_posts"
 			android:persistent="false"
 			android:summary="@string/notify_blog_posts_setting_summary"
 			android:title="@string/notify_blog_posts_setting_title"/>
 
-		<CheckBoxPreference
+		<SwitchPreference
 			android:defaultValue="false"
 			android:key="pref_key_notify_lock_screen"
 			android:persistent="false"
@@ -129,7 +129,7 @@
 			android:title="@string/notify_lock_screen_setting_title"
 			android:visibility="gone"/>
 
-		<CheckBoxPreference
+		<SwitchPreference
 			android:defaultValue="true"
 			android:key="pref_key_notify_vibration"
 			android:persistent="false"
