--- a/briar-android/src/main/res/values/arrays.xml
+++ b/briar-android/src/main/res/values/arrays.xml
@@ -8,16 +8,20 @@
 		<item>@string/bluetooth_setting_enabled</item>
 		<item>@string/bluetooth_setting_disabled</item>
 	</string-array>
+
 	<string-array name="tor_network_setting_names">
+		<item>@string/tor_network_setting_automatic</item>
+		<item>@string/tor_network_setting_without_bridges</item>
+		<item>@string/tor_network_setting_with_bridges</item>
 		<item>@string/tor_network_setting_never</item>
-		<item>@string/tor_network_setting_wifi</item>
-		<item>@string/tor_network_setting_always</item>
 	</string-array>
 	<string-array name="tor_network_setting_values">
 		<item>0</item>
 		<item>1</item>
 		<item>2</item>
+		<item>3</item>
 	</string-array>
+
 	<string-array name="pref_language_values">
 		<item>default</item>
 		<item>en-US</item>
