--- a/briar-android/src/main/res/xml/settings.xml
+++ b/briar-android/src/main/res/xml/settings.xml
@@ -56,7 +56,7 @@
 		android:layout="@layout/preferences_category"
 		android:title="@string/security_settings_title">
 
-		<CheckBoxPreference
+		<SwitchPreference
 			android:key="pref_key_lock"
 			android:persistent="false"
 			android:summary="@string/pref_lock_summary"
