--- a/briar-android/src/main/res/values/dimens.xml
+++ b/briar-android/src/main/res/values/dimens.xml
@@ -38,9 +38,16 @@
 	<dimen name="unread_bubble_padding_horizontal">6dp</dimen>
 	<dimen name="unread_bubble_size">19dp</dimen>
 
-	<dimen name="message_bubble_margin_tail">3dp</dimen>
+	<dimen name="message_bubble_radius_big">16dp</dimen>
+	<dimen name="message_bubble_radius_small">4dp</dimen>
+	<dimen name="message_bubble_margin">6dp</dimen>
+	<dimen name="message_bubble_padding_sides">12dp</dimen>
+	<dimen name="message_bubble_padding_top">6dp</dimen>
+	<dimen name="message_bubble_padding_bottom">4dp</dimen>
+	<dimen name="message_bubble_timestamp_margin">4dp</dimen>
+	<dimen name="message_bubble_elevation">2dp</dimen>
+	<dimen name="message_bubble_margin_tail">8dp</dimen>
 	<dimen name="message_bubble_margin_non_tail">30dp</dimen>
-	<dimen name="message_bubble_timestamp_margin">7dp</dimen>
 
 	<dimen name="forum_nested_line_width">2dp</dimen>
 	<dimen name="forum_nested_indicator">24dp</dimen>
