Add a stroke for private message bubbles on Android 4

--- a/briar-android/src/main/res/drawable/notice_out_bottom.xml
+++ b/briar-android/src/main/res/drawable/notice_out_bottom.xml
@@ -14,4 +14,7 @@
 		android:top="@dimen/message_bubble_padding_bottom"/>
 	<solid
 		android:color="@color/notice_out"/>
+	<stroke
+		android:width="@dimen/message_bubble_stroke"
+		android:color="@color/msg_stroke_dark"/>
 </shape>
