--- a/briar-android/src/main/res/values/color.xml
+++ b/briar-android/src/main/res/values/color.xml
@@ -37,6 +37,9 @@
 	<color name="msg_out">@color/briar_blue_elio_light</color>
 	<color name="notice_in">@color/briar_blue_grey</color>
 	<color name="notice_out">@color/briar_blue_elio</color>
+	<color name="msg_stroke_light">#cbcbcb</color>
+	<color name="msg_stroke_dark">#333333</color>
+	<color name="msg_stroke">@color/msg_stroke_light</color>
 
 	<!-- text colors -->
 	<color name="briar_text_link">@color/briar_blue_light</color>
