--- a/briar-android/src/main/res/layout/fragment_error_contact_exchange.xml
+++ b/briar-android/src/main/res/layout/fragment_error_contact_exchange.xml
@@ -29,7 +29,9 @@
 			android:layout_height="wrap_content"
 			android:layout_marginLeft="16dp"
 			android:layout_marginRight="16dp"
-			android:src="@drawable/qr_code_intro"
+			android:layout_marginTop="16dp"
+			android:scaleType="fitCenter"
+			android:src="@drawable/qr_code_error"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
 			app:layout_constraintTop_toBottomOf="@+id/errorTitle"
@@ -45,30 +47,32 @@
 			android:layout_marginRight="16dp"
 			android:layout_marginStart="16dp"
 			android:layout_marginTop="8dp"
-			android:text="@string/connection_error_explanation"
 			android:textColor="?android:attr/textColorPrimary"
 			android:textSize="@dimen/text_size_medium"
+			app:layout_constraintBottom_toTopOf="@+id/sendFeedback"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toBottomOf="@+id/errorIcon"/>
+			app:layout_constraintTop_toBottomOf="@+id/errorIcon"
+			app:layout_constraintVertical_bias="0"
+			app:layout_constraintVertical_chainStyle="packed"
+			tools:text="@string/connection_error_explanation"/>
 
 		<TextView
-			android:id="@+id/errorMessageTech"
+			android:id="@+id/sendFeedback"
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
-			android:layout_margin="16dp"
-			android:layout_marginBottom="8dp"
-			android:alpha="0.5"
-			android:background="@color/card_background"
-			android:fontFamily="monospace"
-			android:padding="8dp"
-			android:textColor="@color/briar_red"
+			android:layout_marginEnd="16dp"
+			android:layout_marginLeft="16dp"
+			android:layout_marginRight="16dp"
+			android:layout_marginStart="16dp"
+			android:layout_marginTop="8dp"
+			android:text="@string/connection_error_feedback"
+			android:textColor="?android:attr/textColorPrimary"
 			android:textSize="@dimen/text_size_medium"
 			app:layout_constraintBottom_toTopOf="@+id/tryAgainButton"
 			app:layout_constraintEnd_toEndOf="parent"
 			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toBottomOf="@+id/errorMessage"
-			tools:text="@string/connection_failed"/>
+			app:layout_constraintTop_toBottomOf="@+id/errorMessage"/>
 
 		<Button
 			android:id="@+id/tryAgainButton"
