Implement new empty state icons

--- a/briar-android/src/main/res/layout/briar_recycler_view.xml
+++ b/briar-android/src/main/res/layout/briar_recycler_view.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<android.support.constraint.ConstraintLayout
+	android:id="@+id/relativeLayout"
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent">
@@ -10,24 +12,78 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:scrollbars="vertical"
-		tools:listitem="@layout/list_item_contact"/>
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
+		tools:listitem="@layout/list_item_contact"
+		tools:visibility="visible"/>
 
 	<ProgressBar
 		android:id="@+id/progressBar"
 		style="?android:attr/progressBarStyleLarge"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_centerInParent="true"/>
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintLeft_toLeftOf="parent"
+		app:layout_constraintRight_toRightOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
+		tools:visibility="invisible"/>
 
-	<TextView
-		android:id="@+id/emptyView"
+	<android.support.constraint.Group
+		android:id="@+id/emptyState"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_centerInParent="true"
+		app:constraint_referenced_ids="emptyImage, emptyText, emptyAction"
+		tools:visibility="invisible"/>
+
+	<android.support.v7.widget.AppCompatImageView
+		android:id="@+id/emptyImage"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginEnd="16dp"
+		android:layout_marginLeft="16dp"
+		android:layout_marginRight="16dp"
+		android:layout_marginStart="16dp"
+		android:layout_marginTop="16dp"
+		app:layout_constraintBottom_toTopOf="@+id/emptyText"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
+		app:layout_constraintVertical_chainStyle="packed"
+		app:tint="?attr/colorControlNormal"
+		tools:src="@drawable/ic_empty_state_group_list"/>
+
+	<TextView
+		android:id="@+id/emptyText"
+		android:layout_width="0dp"
+		android:layout_height="wrap_content"
 		android:gravity="center"
-		android:padding="@dimen/margin_activity_horizontal"
+		android:padding="@dimen/margin_large"
 		android:text="@string/no_data"
 		android:textSize="@dimen/text_size_large"
+		app:layout_constraintBottom_toTopOf="@+id/emptyAction"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintLeft_toLeftOf="parent"
+		app:layout_constraintRight_toRightOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/emptyImage"
 		tools:text="@string/no_contacts"/>
 
-</RelativeLayout>
+	<TextView
+		android:id="@+id/emptyAction"
+		android:layout_width="0dp"
+		android:layout_height="wrap_content"
+		android:gravity="center"
+		android:paddingBottom="@dimen/margin_large"
+		android:paddingLeft="@dimen/margin_large"
+		android:paddingRight="@dimen/margin_large"
+		android:text="@string/no_data"
+		android:textSize="@dimen/text_size_small"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintLeft_toLeftOf="parent"
+		app:layout_constraintRight_toRightOf="parent"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/emptyText"
+		tools:text="@string/no_contacts_action"/>
+
+</android.support.constraint.ConstraintLayout>
